<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.tnas</groupId>
    <artifactId>introspectorfilter</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <name>Introspector Filter</name>
    <description>
        A simple tool for filtering collections through annotation-driven introspection.
    </description>
    <url>https://tnas.github.io/introspectorfilter/</url>

    <properties>
        <revision>1.0.0</revision>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>11</maven.compiler.release>
        <commons.lang3.version>3.17.0</commons.lang3.version>
        <easy.random.version>5.0.0</easy.random.version>
        <javafaker.version>1.0.2</javafaker.version>
    </properties>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>tnas</id>
            <name>Thiago Nascimento</name>
            <email>nascimenthiago@gmail.com</email>
            <organizationUrl>http://nascimentothiago.rf.gd/</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/tnas/introspectorfilter.git</connection>
        <developerConnection>
            scm:git:ssh://github.com:tnas/introspectorfilter.git
        </developerConnection>
        <url>http://github.com/tnas/introspectorfilter/tree/master</url>
    </scm>

    <modules>
        <module>introspectorfilter-core</module>
        <module>introspectorfilter-jsf</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.11.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies/>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.1</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.10.1</version>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>3.2.7</version>
                    <configuration>
                        <!-- MAVEN_GPG_PASSPHRASE env variable must be defined -->
                        <bestPractices>true</bestPractices>
                        <gpgArguments>
                            <arg>--pinentry-mode</arg>
                            <arg>loopback</arg>
                        </gpgArguments>
                    </configuration>
                    <executions>
                        <execution>
                            <id>sign-artifacts</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>sign</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.1.0</version>
                    <configuration>
                        <failOnMissingWebXml>false</failOnMissingWebXml>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.tomcat.maven</groupId>
                    <artifactId>tomcat7-maven-plugin</artifactId>
                    <version>2.2</version>
                    <configuration>
                        <path>/</path>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-toolchains-plugin</artifactId>
                    <version>3.2.0</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>toolchain</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <toolchains>
                            <jdk>
                                <version>${maven.compiler.release}</version>
                                <vendor>oracle</vendor>
                            </jdk>
                        </toolchains>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.sonatype.central</groupId>
                    <artifactId>central-publishing-maven-plugin</artifactId>
                    <version>0.6.0</version>
                    <extensions>true</extensions>
                    <configuration>
                        <!-- To publish change skipPublishing to false -->
                        <skipPublishing>true</skipPublishing>
                        <publishingServerId>central</publishingServerId>
                        <excludeArtifacts>introspectorfilter-jsf</excludeArtifacts>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <artifactId>maven-gpg-plugin</artifactId>
            </plugin>
            <plugin>
                <artifactId>maven-toolchains-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
